# pichi

./: .gitignore  CMakeLists.txt  ChangeLog.txt  ChangeLog_ru.txt  LICENSE  Log_pichi.php  README  README.md  TODO  command_handler.php  config.php  console_commands.php  database.php  eventHandler.php  fedora_cross_build.sh  getrevision.sh  languages.php  main.php  parse_xml_config.php  pichi  pichi.cpp  pichi.kdev4  pichi.rc  pichi.spec  pichi.xml  pichi_core.php  pichi_functional.php  plugins.php  syntax_analizer.php
Console/CommandLine/: Action.php  Command.php  CustomMessageProvider.php  Option.php
Console/CommandLine/Action/: Help.php  List.php  Password.php  StoreArray.php  StoreFalse.php  StoreInt.php  Version.php
Console/CommandLine/Renderer/: Default.php
XMPP/: Exception.php  Input_Output_Abstract.php  Input_Output_Sqlite.php  Log.php  Roster.php  XMLObj.php  XMLStream.php  XMPP.php
cmake/: FindBoostRegex.cmake
gloox/: CMakeLists.txt  adhoc.h  adhoccommandprovider.h  adhochandler.h  amp.h  annotations.h  attention.h  bookmarkstorage.h  bytestreamdatahandler.h  capabilities.h  chatstate.cpp  chatstate.h  chatstatefilter.h  chatstatehandler.h  client.cpp  client.h  clientbase.cpp  clientbase.h  component.h  connectiontcpbase.cpp  dataform.h  dataformfield.h  dataformfieldcontainer.h  dataformitem.h  dataformreported.h  delayeddelivery.h  disco.h  discohandler.h  dns.cpp  event.h  featureneg.h  flexoff.h  flexoffhandler.h  gloox.cpp  gloox.h  glooxversion.h  gpgencrypted.h  gpgsigned.h  inbandbytestream.cpp  inbandbytestream.h  (+56 more)
languages/: en.xml  id.xml  ru.xml
lua/: example.lua  pichi.lua  uruchie_forum.lua
luasrc/: CMakeLists.txt
pichi-cpp/: CMakeLists.txt  fedora_cross_build.sh  main.cpp  pichi.rc  pichi.xml
pichi-cpp/cmake/: FindBoostRegex.cmake  FindTinyXml.cmake
pichi-cpp/pichi/: CMakeLists.txt  main.cpp  pichi.kdev4
pichi-cpp/pichi/src/: core.h  lastmessage.h  pichiconfig.cpp  pichicore.cpp  pichioptions.cpp  pichioptions.h  system.cpp  system.h
pichi-cpp/src/: commandbase.cpp  commandbase.h  commandhandler.cpp  core.cpp  core.h  languages.h  lastmessage.cpp  lastmessage.h  lexemes.cpp  lexemes.h  log.h  pichiconfig.cpp  pichiconfig.h  pichicore.cpp  pichicore.h  pichicurl.cpp  pichicurl.h  pichievent.h  sqlite.cpp  sqlite.h  xmlsimple.cpp  xmlsimple.h
pichi-cpp/tinyxml/: CMakeLists.txt
pichi-php/: command_handler.php  database.php  languages.php  pichi.xml  plugins.php
pichi-php/Console/: CommandLine.php
pichi-php/Console/CommandLine/: Argument.php  Element.php  Exception.php  MessageProvider.php  Outputter.php  Renderer.php  Result.php
pichi-php/Console/CommandLine/Action/: Callback.php  Counter.php  StoreFloat.php  StoreString.php  StoreTrue.php
pichi-php/Console/CommandLine/MessageProvider/: Default.php
pichi-php/Console/CommandLine/Outputter/: Default.php
pichi-php/XMPP/: BOSH.php  Input_Output_Abstract.php  Roster.php  XMLStream.php
pichi-php/plugins/: google_translate.xml  test.xml  wiki.xml
pichi-php/sql/: readme.txt
plugins/: bidlo.xml  google_search.xml  google_translate.xml  lastfm.xml  test.xml  wiki.xml
sql/: 17-18.sql  18-19.sql
src/: commandbase.cpp  commandbase.h  commandhandler.cpp  commandhandler.h  config.h  core.cpp  core.h  helper.cpp  helper.h  languages.cpp  languages.h  lastmessage.cpp  lastmessage.h  lexemebuilder.cpp  lexemebuilder.h  lexemes.cpp  lexemes.h  log.cpp  log.h  luamanager.cpp  luamanager.h  luamap.cpp  luamap.h  luapichi.cpp  luapichi.h  luasql.cpp  main.cpp  mainwindow.cpp  mainwindow.h  pichi.cpp  pichi.h  pichiconfig.cpp  pichiconfig.h  pichicore.cpp  pichicore.h  pichicurl.cpp  pichicurl.h  pichidbpatcher.cpp  pichidbpatcher.h  pichievent.cpp  (+20 more)
win32cmake/: FindOpenSSL.cmake
